@@ -8,6 +8,8 @@ Changelog
 * Simpler implementation of the ``bind`` function. Should be faster too!
 * The ``bind`` function can now be used on functions with variable arguments
 * The ``bind`` function can be used as decorator
+* The ``bind`` function don't allow the override of injected parameters
+  anymore: it was a bad idea!
 * The ``provide`` method/function can now be used as a decorator
 * Improved the documentation of the ``late_binding`` function
 * PEP8 conformance
